Parser/Flex Bison/jsonpath.output
State 5 conflicts: 1 shift/reduce, 4 reduce/reduce
State 95 conflicts: 4 reduce/reduce
State 117 conflicts: 28 shift/reduce
State 170 conflicts: 1 shift/reduce
State 171 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 201 conflicts: 4 shift/reduce
State 219 conflicts: 4 reduce/reduce
State 223 conflicts: 4 reduce/reduce
State 224 conflicts: 4 reduce/reduce
State 264 conflicts: 28 shift/reduce
State 265 conflicts: 4 reduce/reduce
State 271 conflicts: 32 shift/reduce
State 277 conflicts: 4 reduce/reduce
State 279 conflicts: 4 shift/reduce
State 326 conflicts: 6 reduce/reduce
State 329 conflicts: 6 reduce/reduce
State 330 conflicts: 4 reduce/reduce
State 331 conflicts: 4 reduce/reduce
State 366 conflicts: 4 reduce/reduce
State 392 conflicts: 28 shift/reduce
State 393 conflicts: 28 shift/reduce
State 408 conflicts: 28 shift/reduce


Grammar

    0 $accept: jsonpath_query $end

    1 jsonpath_query: root_identifier segments
    2               | root_identifier segments T_NEW_LINE

    3 segments: ε
    4         | segments S segment

    5 B: T_SPACE
    6  | T_TAB
    7  | T_NEW_LINE
    8  | T_CARRIAGE_RETURN

    9 S: ε
   10  | S B

   11 root_identifier: T_DOLLAR

   12 selector: name_selector
   13         | wildcard_selector
   14         | slice_selector
   15         | index_selector
   16         | filter_selector

   17 name_selector: string_literal

   18 string_literal: T_DOUBLE_QUOTE rep_double_quoted T_DOUBLE_QUOTE
   19               | T_SINGLE_QUOTE rep_single_quoted T_SINGLE_QUOTE

   20 rep_double_quoted: ε
   21                  | rep_double_quoted double_quoted

   22 double_quoted: unescaped
   23              | T_SINGLE_QUOTE
   24              | ESC T_DOUBLE_QUOTE
   25              | ESC escapable

   26 rep_single_quoted: ε
   27                  | rep_single_quoted single_quoted

   28 single_quoted: unescaped
   29              | T_DOUBLE_QUOTE
   30              | ESC T_SINGLE_QUOTE
   31              | ESC escapable

   32 ESC: T_BACKSLASH

   33 unescaped: T_SPACE
   34          | T_EXCLAMATION
   35          | T_HASHTAG
   36          | T_DOLLAR
   37          | T_PERCENT
   38          | T_AMPERSAND
   39          | T_PAREN_OPEN
   40          | T_PAREN_CLOSE
   41          | T_ASTERISK
   42          | T_PLUS
   43          | T_COMMA
   44          | T_HYPHEN
   45          | T_PERIOD
   46          | T_FORWARD_SLASH
   47          | DIGIT
   48          | T_COLON
   49          | T_SEMICOLON
   50          | T_LT
   51          | T_EQUALS
   52          | T_GT
   53          | T_QUESTION
   54          | T_AT
   55          | UCALPHA
   56          | T_SQUARE_BRACKET_OPEN
   57          | T_SQUARE_BRACKET_CLOSE
   58          | T_CIRCUMFLEX
   59          | T_UNDERSCORE
   60          | T_GRAVE
   61          | LCALPHA
   62          | T_CURLY_BRACE_OPEN
   63          | T_VERTICAL_BAR
   64          | T_CURLY_BRACE_CLOSE
   65          | T_TILDE
   66          | T_DEL

   67 escapable: T_LC_B
   68          | T_LC_F
   69          | T_LC_N
   70          | T_LC_R
   71          | T_LC_T
   72          | T_FORWARD_SLASH
   73          | T_BACKSLASH
   74          | T_LC_U hexchar

   75 hexchar: non_surrogate
   76        | high_surrogate T_BACKSLASH T_LC_U low_surrogate

   77 non_surrogate: DIGIT HEXDIG HEXDIG HEXDIG
   78              | T_UC_A HEXDIG HEXDIG HEXDIG
   79              | T_UC_B HEXDIG HEXDIG HEXDIG
   80              | T_UC_C HEXDIG HEXDIG HEXDIG
   81              | T_UC_E HEXDIG HEXDIG HEXDIG
   82              | T_UC_F HEXDIG HEXDIG HEXDIG
   83              | T_UC_D T_ZERO HEXDIG HEXDIG
   84              | T_UC_D T_ONE HEXDIG HEXDIG
   85              | T_UC_D T_TWO HEXDIG HEXDIG
   86              | T_UC_D T_THREE HEXDIG HEXDIG
   87              | T_UC_D T_FOUR HEXDIG HEXDIG
   88              | T_UC_D T_FIVE HEXDIG HEXDIG
   89              | T_UC_D T_SIX HEXDIG HEXDIG
   90              | T_UC_D T_SEVEN HEXDIG HEXDIG

   91 high_surrogate: T_UC_D T_EIGHT HEXDIG HEXDIG
   92               | T_UC_D T_NINE HEXDIG HEXDIG
   93               | T_UC_D T_UC_A HEXDIG HEXDIG
   94               | T_UC_D T_UC_B HEXDIG HEXDIG

   95 low_surrogate: T_UC_D T_UC_C HEXDIG HEXDIG
   96              | T_UC_D T_UC_D HEXDIG HEXDIG
   97              | T_UC_D T_UC_E HEXDIG HEXDIG
   98              | T_UC_D T_UC_F HEXDIG HEXDIG

   99 HEXDIG: DIGIT
  100       | T_UC_A
  101       | T_UC_B
  102       | T_UC_C
  103       | T_UC_D
  104       | T_UC_E
  105       | T_UC_F

  106 wildcard_selector: T_ASTERISK

  107 index_selector: int

  108 int: T_ZERO
  109    | opt_hyphen DIGIT1 rep_DIGIT

  110 opt_hyphen: ε
  111           | T_HYPHEN

  112 DIGIT1: T_ONE
  113       | T_TWO
  114       | T_THREE
  115       | T_FOUR
  116       | T_FIVE
  117       | T_SIX
  118       | T_SEVEN
  119       | T_EIGHT
  120       | T_NINE

  121 rep_DIGIT: ε
  122          | rep_DIGIT DIGIT

  123 slice_selector: opt_start T_COLON S opt_end opt_step

  124 opt_start: ε
  125          | start S

  126 opt_end: ε
  127        | end S

  128 opt_step: ε
  129         | T_COLON S step
  130         | T_COLON

  131 start: int

  132 end: int

  133 step: int

  134 filter_selector: T_QUESTION S logical_expr

  135 logical_expr: logical_or_expr

  136 logical_or_expr: logical_and_expr rep_logical_and_expr

  137 rep_logical_and_expr: ε
  138                     | rep_logical_and_expr S T_VERTICAL_BAR T_VERTICAL_BAR S logical_and_expr

  139 logical_and_expr: basic_expr rep_basic_expr

  140 rep_basic_expr: ε
  141               | rep_basic_expr S T_AMPERSAND T_AMPERSAND S basic_expr

  142 basic_expr: paren_expr
  143           | comparison_expr
  144           | test_expr

  145 paren_expr: opt_not_op T_PAREN_OPEN S logical_expr S T_PAREN_CLOSE

  146 opt_not_op: ε
  147           | logical_not_op S

  148 logical_not_op: T_EXCLAMATION

  149 test_expr: opt_not_op filter_query
  150          | opt_not_op function_expr

  151 filter_query: rel_query
  152             | jsonpath_query

  153 rel_query: current_node_identifier segments

  154 current_node_identifier: T_AT

  155 comparison_expr: comparable S comparison_op S comparable

  156 literal: number
  157        | string_literal
  158        | true
  159        | false
  160        | null

  161 comparable: literal
  162           | singular_query
  163           | function_expr

  164 comparison_op: T_EQUALS T_EQUALS
  165              | T_EXCLAMATION T_EQUALS
  166              | T_LT T_EQUALS
  167              | T_GT T_EQUALS
  168              | T_LT
  169              | T_GT

  170 singular_query: rel_singular_query
  171               | abs_singular_query

  172 rel_singular_query: current_node_identifier singular_query_segments

  173 abs_singular_query: root_identifier singular_query_segments

  174 singular_query_segments: rep_singular_query_segment

  175 rep_singular_query_segment: ε
  176                           | rep_singular_query_segment singular_query_segment

  177 singular_query_segment: S name_segment
  178                       | S index_segment

  179 name_segment: T_SQUARE_BRACKET_OPEN name_selector T_SQUARE_BRACKET_CLOSE
  180             | T_PERIOD member_name_shorthand

  181 index_segment: T_SQUARE_BRACKET_OPEN index_selector T_SQUARE_BRACKET_CLOSE

  182 number: int opt_frac opt_exp
  183       | T_HYPHEN T_ZERO opt_frac opt_exp

  184 opt_frac: ε
  185         | frac

  186 frac: T_PERIOD DIGIT rep_DIGIT

  187 opt_exp: ε
  188        | exp

  189 exp: T_LC_E opt_signed DIGIT rep_DIGIT

  190 opt_signed: ε
  191           | T_HYPHEN
  192           | T_PLUS

  193 true: T_LC_T T_LC_R T_LC_U T_LC_E

  194 false: T_LC_F T_LC_A T_LC_L T_LC_S T_LC_E

  195 null: T_LC_N T_LC_U T_LC_L T_LC_L

  196 function_name: function_name_first rep_function_name_char

  197 rep_function_name_char: ε
  198                       | rep_function_name_char function_name_char

  199 function_name_first: LCALPHA

  200 function_name_char: function_name_first
  201                   | T_UNDERSCORE
  202                   | DIGIT

  203 LCALPHA: T_LC_A
  204        | T_LC_B
  205        | T_LC_C
  206        | T_LC_D
  207        | T_LC_E
  208        | T_LC_F
  209        | T_LC_G
  210        | T_LC_H
  211        | T_LC_I
  212        | T_LC_J
  213        | T_LC_K
  214        | T_LC_L
  215        | T_LC_M
  216        | T_LC_N
  217        | T_LC_O
  218        | T_LC_P
  219        | T_LC_Q
  220        | T_LC_R
  221        | T_LC_S
  222        | T_LC_T
  223        | T_LC_U
  224        | T_LC_V
  225        | T_LC_W
  226        | T_LC_X
  227        | T_LC_Y
  228        | T_LC_Z

  229 function_expr: function_name T_PAREN_OPEN S opt_func_args S T_PAREN_CLOSE

  230 opt_func_args: ε
  231              | function_argument rep_function_argument

  232 rep_function_argument: ε
  233                      | rep_function_argument S T_COMMA S function_argument

  234 function_argument: literal
  235                  | filter_query
  236                  | logical_expr
  237                  | function_expr

  238 segment: child_segment
  239        | descendant_segment

  240 child_segment: bracketed_selection
  241              | T_PERIOD wildcard_selector
  242              | T_PERIOD member_name_shorthand

  243 bracketed_selection: T_SQUARE_BRACKET_OPEN S selector rep_selector S T_SQUARE_BRACKET_CLOSE

  244 rep_selector: ε
  245             | rep_selector S T_COMMA S selector

  246 member_name_shorthand: name_first rep_name_char

  247 name_first: ALPHA
  248           | T_UNDERSCORE

  249 rep_name_char: ε
  250              | rep_name_char name_char

  251 name_char: name_first
  252          | DIGIT

  253 DIGIT: T_ZERO
  254      | DIGIT1

  255 ALPHA: UCALPHA
  256      | LCALPHA

  257 UCALPHA: T_UC_A
  258        | T_UC_B
  259        | T_UC_C
  260        | T_UC_D
  261        | T_UC_E
  262        | T_UC_F
  263        | T_UC_G
  264        | T_UC_H
  265        | T_UC_I
  266        | T_UC_J
  267        | T_UC_K
  268        | T_UC_L
  269        | T_UC_M
  270        | T_UC_N
  271        | T_UC_O
  272        | T_UC_P
  273        | T_UC_Q
  274        | T_UC_R
  275        | T_UC_S
  276        | T_UC_T
  277        | T_UC_U
  278        | T_UC_V
  279        | T_UC_W
  280        | T_UC_X
  281        | T_UC_Y
  282        | T_UC_Z

  283 descendant_segment: T_PERIOD T_PERIOD bracketed_selection
  284                   | T_PERIOD T_PERIOD wildcard_selector
  285                   | T_PERIOD T_PERIOD member_name_shorthand


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_TAB (258) 6
    T_NEW_LINE (259) 2 7
    T_CARRIAGE_RETURN (260) 8
    T_SPACE (261) 5 33
    T_EXCLAMATION (262) 34 148 165
    T_DOUBLE_QUOTE (263) 18 24 29
    T_HASHTAG (264) 35
    T_DOLLAR (265) 11 36
    T_PERCENT (266) 37
    T_AMPERSAND (267) 38 141
    T_SINGLE_QUOTE (268) 19 23 30
    T_PAREN_OPEN (269) 39 145 229
    T_PAREN_CLOSE (270) 40 145 229
    T_ASTERISK (271) 41 106
    T_PLUS (272) 42 192
    T_COMMA (273) 43 233 245
    T_HYPHEN (274) 44 111 183 191
    T_PERIOD (275) 45 180 186 241 242 283 284 285
    T_FORWARD_SLASH (276) 46 72
    T_ZERO (277) 83 108 183 253
    T_ONE (278) 84 112
    T_TWO (279) 85 113
    T_THREE (280) 86 114
    T_FOUR (281) 87 115
    T_FIVE (282) 88 116
    T_SIX (283) 89 117
    T_SEVEN (284) 90 118
    T_EIGHT (285) 91 119
    T_NINE (286) 92 120
    T_COLON (287) 48 123 129 130
    T_SEMICOLON (288) 49
    T_LT (289) 50 166 168
    T_EQUALS (290) 51 164 165 166 167
    T_GT (291) 52 167 169
    T_QUESTION (292) 53 134
    T_AT (293) 54 154
    T_UC_A (294) 78 93 100 257
    T_UC_B (295) 79 94 101 258
    T_UC_C (296) 80 95 102 259
    T_UC_D (297) 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 103 260
    T_UC_E (298) 81 97 104 261
    T_UC_F (299) 82 98 105 262
    T_UC_G (300) 263
    T_UC_H (301) 264
    T_UC_I (302) 265
    T_UC_J (303) 266
    T_UC_K (304) 267
    T_UC_L (305) 268
    T_UC_M (306) 269
    T_UC_N (307) 270
    T_UC_O (308) 271
    T_UC_P (309) 272
    T_UC_Q (310) 273
    T_UC_R (311) 274
    T_UC_S (312) 275
    T_UC_T (313) 276
    T_UC_U (314) 277
    T_UC_V (315) 278
    T_UC_W (316) 279
    T_UC_X (317) 280
    T_UC_Y (318) 281
    T_UC_Z (319) 282
    T_SQUARE_BRACKET_OPEN (320) 56 179 181 243
    T_BACKSLASH (321) 32 73 76
    T_SQUARE_BRACKET_CLOSE (322) 57 179 181 243
    T_CIRCUMFLEX (323) 58
    T_UNDERSCORE (324) 59 201 248
    T_GRAVE (325) 60
    T_LC_A (326) 194 203
    T_LC_B (327) 67 204
    T_LC_C (328) 205
    T_LC_D (329) 206
    T_LC_E (330) 189 193 194 207
    T_LC_F (331) 68 194 208
    T_LC_G (332) 209
    T_LC_H (333) 210
    T_LC_I (334) 211
    T_LC_J (335) 212
    T_LC_K (336) 213
    T_LC_L (337) 194 195 214
    T_LC_M (338) 215
    T_LC_N (339) 69 195 216
    T_LC_O (340) 217
    T_LC_P (341) 218
    T_LC_Q (342) 219
    T_LC_R (343) 70 193 220
    T_LC_S (344) 194 221
    T_LC_T (345) 71 193 222
    T_LC_U (346) 74 76 193 195 223
    T_LC_V (347) 224
    T_LC_W (348) 225
    T_LC_X (349) 226
    T_LC_Y (350) 227
    T_LC_Z (351) 228
    T_CURLY_BRACE_OPEN (352) 62
    T_VERTICAL_BAR (353) 63 138
    T_CURLY_BRACE_CLOSE (354) 64
    T_TILDE (355) 65
    T_DEL (356) 66


Nonterminals, with rules where they appear

    $accept (102)
        on left: 0
    jsonpath_query (103)
        on left: 1 2
        on right: 0 152
    segments (104)
        on left: 3 4
        on right: 1 2 4 153
    B (105)
        on left: 5 6 7 8
        on right: 10
    S (106)
        on left: 9 10
        on right: 4 10 123 125 127 129 134 138 141 145 147 155 177 178 229 233 243 245
    root_identifier (107)
        on left: 11
        on right: 1 2 173
    selector (108)
        on left: 12 13 14 15 16
        on right: 243 245
    name_selector (109)
        on left: 17
        on right: 12 179
    string_literal (110)
        on left: 18 19
        on right: 17 157
    rep_double_quoted (111)
        on left: 20 21
        on right: 18 21
    double_quoted (112)
        on left: 22 23 24 25
        on right: 21
    rep_single_quoted (113)
        on left: 26 27
        on right: 19 27
    single_quoted (114)
        on left: 28 29 30 31
        on right: 27
    ESC (115)
        on left: 32
        on right: 24 25 30 31
    unescaped (116)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 22 28
    escapable (117)
        on left: 67 68 69 70 71 72 73 74
        on right: 25 31
    hexchar (118)
        on left: 75 76
        on right: 74
    non_surrogate (119)
        on left: 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 75
    high_surrogate (120)
        on left: 91 92 93 94
        on right: 76
    low_surrogate (121)
        on left: 95 96 97 98
        on right: 76
    HEXDIG (122)
        on left: 99 100 101 102 103 104 105
        on right: 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
    wildcard_selector (123)
        on left: 106
        on right: 13 241 284
    index_selector (124)
        on left: 107
        on right: 15 181
    int (125)
        on left: 108 109
        on right: 107 131 132 133 182
    opt_hyphen (126)
        on left: 110 111
        on right: 109
    DIGIT1 (127)
        on left: 112 113 114 115 116 117 118 119 120
        on right: 109 254
    rep_DIGIT (128)
        on left: 121 122
        on right: 109 122 186 189
    slice_selector (129)
        on left: 123
        on right: 14
    opt_start (130)
        on left: 124 125
        on right: 123
    opt_end (131)
        on left: 126 127
        on right: 123
    opt_step (132)
        on left: 128 129 130
        on right: 123
    start (133)
        on left: 131
        on right: 125
    end (134)
        on left: 132
        on right: 127
    step (135)
        on left: 133
        on right: 129
    filter_selector (136)
        on left: 134
        on right: 16
    logical_expr (137)
        on left: 135
        on right: 134 145 236
    logical_or_expr (138)
        on left: 136
        on right: 135
    rep_logical_and_expr (139)
        on left: 137 138
        on right: 136 138
    logical_and_expr (140)
        on left: 139
        on right: 136 138
    rep_basic_expr (141)
        on left: 140 141
        on right: 139 141
    basic_expr (142)
        on left: 142 143 144
        on right: 139 141
    paren_expr (143)
        on left: 145
        on right: 142
    opt_not_op (144)
        on left: 146 147
        on right: 145 149 150
    logical_not_op (145)
        on left: 148
        on right: 147
    test_expr (146)
        on left: 149 150
        on right: 144
    filter_query (147)
        on left: 151 152
        on right: 149 235
    rel_query (148)
        on left: 153
        on right: 151
    current_node_identifier (149)
        on left: 154
        on right: 153 172
    comparison_expr (150)
        on left: 155
        on right: 143
    literal (151)
        on left: 156 157 158 159 160
        on right: 161 234
    comparable (152)
        on left: 161 162 163
        on right: 155
    comparison_op (153)
        on left: 164 165 166 167 168 169
        on right: 155
    singular_query (154)
        on left: 170 171
        on right: 162
    rel_singular_query (155)
        on left: 172
        on right: 170
    abs_singular_query (156)
        on left: 173
        on right: 171
    singular_query_segments (157)
        on left: 174
        on right: 172 173
    rep_singular_query_segment (158)
        on left: 175 176
        on right: 174 176
    singular_query_segment (159)
        on left: 177 178
        on right: 176
    name_segment (160)
        on left: 179 180
        on right: 177
    index_segment (161)
        on left: 181
        on right: 178
    number (162)
        on left: 182 183
        on right: 156
    opt_frac (163)
        on left: 184 185
        on right: 182 183
    frac (164)
        on left: 186
        on right: 185
    opt_exp (165)
        on left: 187 188
        on right: 182 183
    exp (166)
        on left: 189
        on right: 188
    opt_signed (167)
        on left: 190 191 192
        on right: 189
    true (168)
        on left: 193
        on right: 158
    false (169)
        on left: 194
        on right: 159
    null (170)
        on left: 195
        on right: 160
    function_name (171)
        on left: 196
        on right: 229
    rep_function_name_char (172)
        on left: 197 198
        on right: 196 198
    function_name_first (173)
        on left: 199
        on right: 196 200
    function_name_char (174)
        on left: 200 201 202
        on right: 198
    LCALPHA (175)
        on left: 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228
        on right: 61 199 256
    function_expr (176)
        on left: 229
        on right: 150 163 237
    opt_func_args (177)
        on left: 230 231
        on right: 229
    rep_function_argument (178)
        on left: 232 233
        on right: 231 233
    function_argument (179)
        on left: 234 235 236 237
        on right: 231 233
    segment (180)
        on left: 238 239
        on right: 4
    child_segment (181)
        on left: 240 241 242
        on right: 238
    bracketed_selection (182)
        on left: 243
        on right: 240 283
    rep_selector (183)
        on left: 244 245
        on right: 243 245
    member_name_shorthand (184)
        on left: 246
        on right: 180 242 285
    name_first (185)
        on left: 247 248
        on right: 246 251
    rep_name_char (186)
        on left: 249 250
        on right: 246 250
    name_char (187)
        on left: 251 252
        on right: 250
    DIGIT (188)
        on left: 253 254
        on right: 47 77 99 122 186 189 202 252
    ALPHA (189)
        on left: 255 256
        on right: 247
    UCALPHA (190)
        on left: 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274 275 276 277 278 279 280 281 282
        on right: 55 255
    descendant_segment (191)
        on left: 283 284 285
        on right: 239


State 0

    0 $accept: • jsonpath_query $end

    T_DOLLAR  shift, and go to state 1

    jsonpath_query   go to state 2
    root_identifier  go to state 3


State 1

   11 root_identifier: T_DOLLAR •

    $default  reduce using rule 11 (root_identifier)


State 2

    0 $accept: jsonpath_query • $end

    $end  shift, and go to state 4


State 3

    1 jsonpath_query: root_identifier • segments
    2               | root_identifier • segments T_NEW_LINE

    $default  reduce using rule 3 (segments)

    segments  go to state 5


State 4

    0 $accept: jsonpath_query $end •

    $default  accept


State 5

    1 jsonpath_query: root_identifier segments •
    2               | root_identifier segments • T_NEW_LINE
    4 segments: segments • S segment

    T_NEW_LINE  shift, and go to state 6

    T_TAB                  reduce using rule 1 (jsonpath_query)
    T_TAB                  [reduce using rule 9 (S)]
    T_NEW_LINE             [reduce using rule 1 (jsonpath_query)]
    T_NEW_LINE             [reduce using rule 9 (S)]
    T_CARRIAGE_RETURN      reduce using rule 1 (jsonpath_query)
    T_CARRIAGE_RETURN      [reduce using rule 9 (S)]
    T_SPACE                reduce using rule 1 (jsonpath_query)
    T_SPACE                [reduce using rule 9 (S)]
    T_PERIOD               reduce using rule 9 (S)
    T_SQUARE_BRACKET_OPEN  reduce using rule 9 (S)
    $default               reduce using rule 1 (jsonpath_query)

    S  go to state 7


State 6

    2 jsonpath_query: root_identifier segments T_NEW_LINE •

    $default  reduce using rule 2 (jsonpath_query)


State 7

    4 segments: segments S • segment
   10 S: S • B

    T_TAB                  shift, and go to state 8
    T_NEW_LINE             shift, and go to state 9
    T_CARRIAGE_RETURN      shift, and go to state 10
    T_SPACE                shift, and go to state 11
    T_PERIOD               shift, and go to state 12
    T_SQUARE_BRACKET_OPEN  shift, and go to state 13

    B                    go to state 14
    segment              go to state 15
    child_segment        go to state 16
    bracketed_selection  go to state 17
    descendant_segment   go to state 18


State 8

    6 B: T_TAB •

    $default  reduce using rule 6 (B)


State 9

    7 B: T_NEW_LINE •

    $default  reduce using rule 7 (B)


State 10

    8 B: T_CARRIAGE_RETURN •

    $default  reduce using rule 8 (B)


State 11

    5 B: T_SPACE •

    $default  reduce using rule 5 (B)


State 12

  241 child_segment: T_PERIOD • wildcard_selector
  242              | T_PERIOD • member_name_shorthand
  283 descendant_segment: T_PERIOD • T_PERIOD bracketed_selection
  284                   | T_PERIOD • T_PERIOD wildcard_selector
  285                   | T_PERIOD • T_PERIOD member_name_shorthand

    T_ASTERISK    shift, and go to state 19
    T_PERIOD      shift, and go to state 20
    T_UC_A        shift, and go to state 21
    T_UC_B        shift, and go to state 22
    T_UC_C        shift, and go to state 23
    T_UC_D        shift, and go to state 24
    T_UC_E        shift, and go to state 25
    T_UC_F        shift, and go to state 26
    T_UC_G        shift, and go to state 27
    T_UC_H        shift, and go to state 28
    T_UC_I        shift, and go to state 29
    T_UC_J        shift, and go to state 30
    T_UC_K        shift, and go to state 31
    T_UC_L        shift, and go to state 32
    T_UC_M        shift, and go to state 33
    T_UC_N        shift, and go to state 34
    T_UC_O        shift, and go to state 35
    T_UC_P        shift, and go to state 36
    T_UC_Q        shift, and go to state 37
    T_UC_R        shift, and go to state 38
    T_UC_S        shift, and go to state 39
    T_UC_T        shift, and go to state 40
    T_UC_U        shift, and go to state 41
    T_UC_V        shift, and go to state 42
    T_UC_W        shift, and go to state 43
    T_UC_X        shift, and go to state 44
    T_UC_Y        shift, and go to state 45
    T_UC_Z        shift, and go to state 46
    T_UNDERSCORE  shift, and go to state 47
    T_LC_A        shift, and go to state 48
    T_LC_B        shift, and go to state 49
    T_LC_C        shift, and go to state 50
    T_LC_D        shift, and go to state 51
    T_LC_E        shift, and go to state 52
    T_LC_F        shift, and go to state 53
    T_LC_G        shift, and go to state 54
    T_LC_H        shift, and go to state 55
    T_LC_I        shift, and go to state 56
    T_LC_J        shift, and go to state 57
    T_LC_K        shift, and go to state 58
    T_LC_L        shift, and go to state 59
    T_LC_M        shift, and go to state 60
    T_LC_N        shift, and go to state 61
    T_LC_O        shift, and go to state 62
    T_LC_P        shift, and go to state 63
    T_LC_Q        shift, and go to state 64
    T_LC_R        shift, and go to state 65
    T_LC_S        shift, and go to state 66
    T_LC_T        shift, and go to state 67
    T_LC_U        shift, and go to state 68
    T_LC_V        shift, and go to state 69
    T_LC_W        shift, and go to state 70
    T_LC_X        shift, and go to state 71
    T_LC_Y        shift, and go to state 72
    T_LC_Z        shift, and go to state 73

    wildcard_selector      go to state 74
    LCALPHA                go to state 75
    member_name_shorthand  go to state 76
    name_first             go to state 77
    ALPHA                  go to state 78
    UCALPHA                go to state 79


State 13

  243 bracketed_selection: T_SQUARE_BRACKET_OPEN • S selector rep_selector S T_SQUARE_BRACKET_CLOSE

    $default  reduce using rule 9 (S)

    S  go to state 80


State 14

   10 S: S B •

    $default  reduce using rule 10 (S)


State 15

    4 segments: segments S segment •

    $default  reduce using rule 4 (segments)


State 16

  238 segment: child_segment •

    $default  reduce using rule 238 (segment)


State 17

  240 child_segment: bracketed_selection •

    $default  reduce using rule 240 (child_segment)


State 18

  239 segment: descendant_segment •

    $default  reduce using rule 239 (segment)


State 19

  106 wildcard_selector: T_ASTERISK •

    $default  reduce using rule 106 (wildcard_selector)


State 20

  283 descendant_segment: T_PERIOD T_PERIOD • bracketed_selection
  284                   | T_PERIOD T_PERIOD • wildcard_selector
  285                   | T_PERIOD T_PERIOD • member_name_shorthand

    T_ASTERISK             shift, and go to state 19
    T_UC_A                 shift, and go to state 21
    T_UC_B                 shift, and go to state 22
    T_UC_C                 shift, and go to state 23
    T_UC_D                 shift, and go to state 24
    T_UC_E                 shift, and go to state 25
    T_UC_F                 shift, and go to state 26
    T_UC_G                 shift, and go to state 27
    T_UC_H                 shift, and go to state 28
    T_UC_I                 shift, and go to state 29
    T_UC_J                 shift, and go to state 30
    T_UC_K                 shift, and go to state 31
    T_UC_L                 shift, and go to state 32
    T_UC_M                 shift, and go to state 33
    T_UC_N                 shift, and go to state 34
    T_UC_O                 shift, and go to state 35
    T_UC_P                 shift, and go to state 36
    T_UC_Q                 shift, and go to state 37
    T_UC_R                 shift, and go to state 38
    T_UC_S                 shift, and go to state 39
    T_UC_T                 shift, and go to state 40
    T_UC_U                 shift, and go to state 41
    T_UC_V                 shift, and go to state 42
    T_UC_W                 shift, and go to state 43
    T_UC_X                 shift, and go to state 44
    T_UC_Y                 shift, and go to state 45
    T_UC_Z                 shift, and go to state 46
    T_SQUARE_BRACKET_OPEN  shift, and go to state 13
    T_UNDERSCORE           shift, and go to state 47
    T_LC_A                 shift, and go to state 48
    T_LC_B                 shift, and go to state 49
    T_LC_C                 shift, and go to state 50
    T_LC_D                 shift, and go to state 51
    T_LC_E                 shift, and go to state 52
    T_LC_F                 shift, and go to state 53
    T_LC_G                 shift, and go to state 54
    T_LC_H                 shift, and go to state 55
    T_LC_I                 shift, and go to state 56
    T_LC_J                 shift, and go to state 57
    T_LC_K                 shift, and go to state 58
    T_LC_L                 shift, and go to state 59
    T_LC_M                 shift, and go to state 60
    T_LC_N                 shift, and go to state 61
    T_LC_O                 shift, and go to state 62
    T_LC_P                 shift, and go to state 63
    T_LC_Q                 shift, and go to state 64
    T_LC_R                 shift, and go to state 65
    T_LC_S                 shift, and go to state 66
    T_LC_T                 shift, and go to state 67
    T_LC_U                 shift, and go to state 68
    T_LC_V                 shift, and go to state 69
    T_LC_W                 shift, and go to state 70
    T_LC_X                 shift, and go to state 71
    T_LC_Y                 shift, and go to state 72
    T_LC_Z                 shift, and go to state 73

    wildcard_selector      go to state 81
    LCALPHA                go to state 75
    bracketed_selection    go to state 82
    member_name_shorthand  go to state 83
    name_first             go to state 77
    ALPHA                  go to state 78
    UCALPHA                go to state 79


State 21

  257 UCALPHA: T_UC_A •

    $default  reduce using rule 257 (UCALPHA)


State 22

  258 UCALPHA: T_UC_B •

    $default  reduce using rule 258 (UCALPHA)


State 23

  259 UCALPHA: T_UC_C •

    $default  reduce using rule 259 (UCALPHA)


State 24

  260 UCALPHA: T_UC_D •

    $default  reduce using rule 260 (UCALPHA)


State 25

  261 UCALPHA: T_UC_E •

    $default  reduce using rule 261 (UCALPHA)


State 26

  262 UCALPHA: T_UC_F •

    $default  reduce using rule 262 (UCALPHA)


State 27

  263 UCALPHA: T_UC_G •

    $default  reduce using rule 263 (UCALPHA)


State 28

  264 UCALPHA: T_UC_H •

    $default  reduce using rule 264 (UCALPHA)


State 29

  265 UCALPHA: T_UC_I •

    $default  reduce using rule 265 (UCALPHA)


State 30

  266 UCALPHA: T_UC_J •

    $default  reduce using rule 266 (UCALPHA)


State 31

  267 UCALPHA: T_UC_K •

    $default  reduce using rule 267 (UCALPHA)


State 32

  268 UCALPHA: T_UC_L •

    $default  reduce using rule 268 (UCALPHA)


State 33

  269 UCALPHA: T_UC_M •

    $default  reduce using rule 269 (UCALPHA)


State 34

  270 UCALPHA: T_UC_N •

    $default  reduce using rule 270 (UCALPHA)


State 35

  271 UCALPHA: T_UC_O •

    $default  reduce using rule 271 (UCALPHA)


State 36

  272 UCALPHA: T_UC_P •

    $default  reduce using rule 272 (UCALPHA)


State 37

  273 UCALPHA: T_UC_Q •

    $default  reduce using rule 273 (UCALPHA)


State 38

  274 UCALPHA: T_UC_R •

    $default  reduce using rule 274 (UCALPHA)


State 39

  275 UCALPHA: T_UC_S •

    $default  reduce using rule 275 (UCALPHA)


State 40

  276 UCALPHA: T_UC_T •

    $default  reduce using rule 276 (UCALPHA)


State 41

  277 UCALPHA: T_UC_U •

    $default  reduce using rule 277 (UCALPHA)


State 42

  278 UCALPHA: T_UC_V •

    $default  reduce using rule 278 (UCALPHA)


State 43

  279 UCALPHA: T_UC_W •

    $default  reduce using rule 279 (UCALPHA)


State 44

  280 UCALPHA: T_UC_X •

    $default  reduce using rule 280 (UCALPHA)


State 45

  281 UCALPHA: T_UC_Y •

    $default  reduce using rule 281 (UCALPHA)


State 46

  282 UCALPHA: T_UC_Z •

    $default  reduce using rule 282 (UCALPHA)


State 47

  248 name_first: T_UNDERSCORE •

    $default  reduce using rule 248 (name_first)


State 48

  203 LCALPHA: T_LC_A •

    $default  reduce using rule 203 (LCALPHA)


State 49

  204 LCALPHA: T_LC_B •

    $default  reduce using rule 204 (LCALPHA)


State 50

  205 LCALPHA: T_LC_C •
